--liquibase formatted sql

--changeset firsttake:1
CREATE TABLE app_user (
    id BIGSERIAL PRIMARY KEY,
    email VARCHAR(320) UNIQUE,
    email_verified BOOLEAN NOT NULL DEFAULT FALSE,
    password_hash VARCHAR(255),
    display_name VARCHAR(255),
    coin_balance BIGINT NOT NULL DEFAULT 0,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    last_login_at TIMESTAMP
);

--changeset firsttake:2
CREATE TABLE user_auth_provider (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    provider VARCHAR(50) NOT NULL,
    provider_subject VARCHAR(255) NOT NULL,
    provider_email VARCHAR(320),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UNIQUE (provider, provider_subject)
);

--changeset firsttake:3
CREATE TABLE email_verification_token (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    token VARCHAR(255) NOT NULL UNIQUE,
    expires_at TIMESTAMP NOT NULL,
    used_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:4
CREATE TABLE password_reset_token (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    token VARCHAR(255) NOT NULL UNIQUE,
    expires_at TIMESTAMP NOT NULL,
    used_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:5
CREATE TABLE project (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    name VARCHAR(255) NOT NULL,
    general_prompt TEXT,
    tone VARCHAR(255),
    narrator_voice VARCHAR(255),
    narrator_voice_prompt TEXT,
    visual_style_prompt TEXT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:6
CREATE TABLE timeline_beat (
    id BIGSERIAL PRIMARY KEY,
    project_id BIGINT NOT NULL REFERENCES project(id) ON DELETE CASCADE,
    order_index INT NOT NULL,
    script_sentence TEXT,
    scene_prompt TEXT,
    scene_type VARCHAR(32) NOT NULL,
    selected_for_generation BOOLEAN NOT NULL DEFAULT TRUE,
    video_generate_audio BOOLEAN NOT NULL DEFAULT FALSE,
    video_model VARCHAR(64),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:7
CREATE TABLE generated_asset (
    id BIGSERIAL PRIMARY KEY,
    beat_id BIGINT NOT NULL REFERENCES timeline_beat(id) ON DELETE CASCADE,
    project_id BIGINT NOT NULL REFERENCES project(id) ON DELETE CASCADE,
    created_by_user_id BIGINT REFERENCES app_user(id) ON DELETE SET NULL,
    asset_type VARCHAR(32) NOT NULL,
    url TEXT NOT NULL,
    provider VARCHAR(255),
    mime_type VARCHAR(255),
    duration_seconds DOUBLE PRECISION,
    original_prompt TEXT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:8
CREATE INDEX idx_generated_asset_project_id ON generated_asset(project_id);

--changeset firsttake:9
CREATE INDEX idx_generated_asset_user_id ON generated_asset(created_by_user_id);

--changeset firsttake:10
CREATE TABLE coin_transaction (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    type VARCHAR(32) NOT NULL,
    amount BIGINT NOT NULL,
    reason VARCHAR(255),
    related_project_id BIGINT REFERENCES project(id) ON DELETE SET NULL,
    related_asset_id BIGINT REFERENCES generated_asset(id) ON DELETE SET NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:11
CREATE TABLE subscription (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    plan VARCHAR(100) NOT NULL,
    status VARCHAR(32) NOT NULL,
    current_period_start TIMESTAMP,
    current_period_end TIMESTAMP,
    provider VARCHAR(100),
    provider_subscription_id VARCHAR(255),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

--changeset firsttake:12
CREATE TABLE user_session (
    id BIGSERIAL PRIMARY KEY,
    user_id BIGINT NOT NULL REFERENCES app_user(id) ON DELETE CASCADE,
    refresh_token VARCHAR(255) NOT NULL,
    expires_at TIMESTAMP NOT NULL,
    revoked_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UNIQUE (refresh_token)
);

--changeset firsttake:13
ALTER TABLE project ADD COLUMN status VARCHAR(32);
UPDATE project SET status = 'SAVED' WHERE status IS NULL;
ALTER TABLE project ALTER COLUMN status SET NOT NULL;
ALTER TABLE project ALTER COLUMN status SET DEFAULT 'DRAFT';
ALTER TABLE project ADD COLUMN last_opened_at TIMESTAMP;

--changeset firsttake:14
ALTER TABLE generated_asset DROP CONSTRAINT generated_asset_beat_id_fkey;
ALTER TABLE generated_asset ALTER COLUMN beat_id DROP NOT NULL;
ALTER TABLE generated_asset
    ADD CONSTRAINT generated_asset_beat_id_fkey
    FOREIGN KEY (beat_id) REFERENCES timeline_beat(id) ON DELETE SET NULL;
